@startuml

title __PROBLEM 2's Class Diagram__\n

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.Wrapper {
    }
  }
  

  namespace mediator {
    class mediator.JCC {
    }
  }
  

  namespace mediator {
    interface mediator.Mediator {
    }
  }
  

  namespace service {
    class service.JPDC {
    }
  }
  

  namespace service {
    class service.JRTA {
    }
  }
  

  namespace service {
    class service.JRTC {
    }
  }
  

  namespace service {
    class service.JWSA {
    }
  }
  

  namespace service {
    interface service.Service {
    }
  }
  

  com.company.Wrapper o-- mediator.JCC : jcc
  com.company.Wrapper o-- service.JPDC : jpdc
  com.company.Wrapper o-- service.JRTA : jrta
  com.company.Wrapper o-- service.JRTC : jrtc
  com.company.Wrapper o-- service.JWSA : jwsa
  mediator.JCC .up.|> mediator.Mediator
  service.JPDC .up.|> service.Service
  service.JPDC o-- mediator.Mediator : mediator
  service.JRTA .up.|> service.Service
  service.JRTA o-- mediator.Mediator : mediator
  service.JRTC .up.|> service.Service
  service.JRTC o-- mediator.Mediator : mediator
  service.JWSA .up.|> service.Service
  service.JWSA o-- mediator.Mediator : mediator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
